--- a/.github/workflows/keep-supabase-alive.yml
+++ b/.github/workflows/keep-supabase-alive.yml
@@ -2,8 +2,11 @@ name: Keep Supabase Active
 
 on:
   schedule:
-    # Run daily at 9:00 AM UTC (adjust timezone as needed)
+    # Run twice daily to ensure Supabase stays active (Supabase pauses after 7 days of inactivity)
+    # Morning: 9:00 AM UTC
     - cron: '0 9 * * *'
+    # Evening: 9:00 PM UTC (for extra safety)
+    - cron: '0 21 * * *'
   workflow_dispatch:  # Allows manual triggering from GitHub UI
 
 jobs:
